[WBCAMS-52,WBCAMS-53,WBCAMS-54] resolve issue with missing icons on FireFox (#381)
* resolve issue with missing icons on FireFox

* styling tweaks

* moved jobboard css to _job_board.scss in WorkBC theme

* refactoring jobboard css

* job board css updates

--- a/src/web/themes/custom/workbc/scss/overrides/_job_board.scss
+++ b/src/web/themes/custom/workbc/scss/overrides/_job_board.scss
@@ -200,101 +200,30 @@ app-root .account-contain app-account-dashboard .card .btn{margin:0px;}
 
 .job-search__form-container .form-radios{width:100%;margin-bottom: 20px; display: flex; gap: 20px;}
 
-/***** Webform request-tour-stop starts *******/
-.form-type-webform-terms-of-service .form-checkbox{display:none;}
-div.ui-dialog[aria-describedby="webform-terms-of-service-terms_of_service--description"] {
-  max-width: 500px;
-}
-div.ui-dialog[aria-describedby="webform-terms-of-service-terms_of_service--description"] .ui-dialog-titlebar {
-  background: #fff;
-  color: #234075;
-  font-size: 1.0625rem;
-  padding-bottom: 0px;
-  border:0px;
-  padding-top:15px;
-}
-div.ui-dialog[aria-describedby="webform-terms-of-service-terms_of_service--description"] .ui-dialog-title {
-  font-size: 1.0625rem;
-  margin-bottom: 0.85em;
-}
-div.ui-dialog[aria-describedby="webform-terms-of-service-terms_of_service--description"] .webform-terms-of-service-details {
-  margin-top: 0px;
-  padding: 0px 20px;
-}
-div.ui-dialog[aria-describedby="webform-terms-of-service-terms_of_service--description"] > .webform-terms-of-service-details p {
-  font-size: 13px;
-  color: #234075;
-}
-div.ui-dialog[aria-describedby="webform-terms-of-service-terms_of_service--description"] .ui-dialog-titlebar-close{
-  height: 12px;
-  width: 12px;
-  padding:0px;
-  margin-right: 10px;
-  top: 0px !important;
-  margin-top: 11px !important;
-  opacity:0.5 !important;
-}
-/* .ui-dialog .ui-button .ui-icon {
-  background: none !important;
-} */
-.path-webform .description.form-item__description {display:inline-block;margin-left:10px;}
-.path-webform div.ui-dialog[aria-describedby="webform-terms-of-service-terms_of_service--description"]:focus, div.ui-dialog[aria-describedby="webform-terms-of-service-terms_of_service--description"] *:focus, div.ui-dialog[aria-describedby="webform-terms-of-service-terms_of_service--description"] .ui-dialog-titlebar-close:focus{box-shadow:inherit !important;border:inherit !important; margin-right: 10px; margin-top: 0px;}
-.webform-submission-request-a-tour-stop-form .form-actions{
-  margin:35px 0px;
-}
-.webform-submission-request-a-tour-stop-form .view-collection-notice.option{
-  margin-top:5px;
-}
-.webform-submission-request-a-tour-stop-form .view-collection-notice.option a{
-  display: inline-flex;
-}
-.webform-submission-request-a-tour-stop-form .view-collection-notice.option a:after {
-    content: "";
-    height: 18px;
-    width: 18px;
-    background: url(../../../../themes/custom/workbc/assets/images/chevron.svg) 50% 50% no-repeat;
-    transform: translateX(5px);
-    transition: transform .1s;
-    margin-top:3px;
-}
-.webform-submission-request-a-tour-stop-form .view-collection-notice.option a:hover:after{
-  transform: translateX(8px);
-}
-/***** Webform request-tour-stop ends *******/
-/***** Map regional profiles starts *******/
-.desktop-hidden{display:none;}
-@media screen and (max-width: 679px) {
-  .region-map-select.mobile-regions{
-    display:block;
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-    margin-bottom:20px;
-  }
-  .region-map-select.mobile-regions select{
-    padding: 9px 25px 9px 10px;
-  }
-  .custom-select__icon {
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 45px;
-    width: 40px;
-    padding: 0;
-    z-index: 2;
-    pointer-events: none;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-color: #224076;
-    background-position-y: 50%;
-  }
-  .webform-submission-request-a-tour-stop-form option:checked{
-    background-color:#224076;
-  }
-}
-/***** Map regional profiles ends *******/
-
 /***** Search Form starts *******/
 .workbc-jobboard-search-form fieldset.form-item{border:0px;}
 .workbc-jobboard-search-form fieldset.form-item .fieldset-wrapper{padding:0px;}
 /***** Search Form ends *******/
+
+
+.job-item .icon,
+.job-details .icon {
+  width: 12px;
+}
+
+
+.job-alert .icon {
+  width: 16px;
+}
+
+.map-view .icon {
+  width: 22.5px;
+}
+
+#PostingLanguage .form-check-label {
+  padding-left: 25px;
+}
+
+.tooltip-icon .icon {
+  width: 20px;
+}
